--- a/todo
+++ b/todo
@@ -2,6 +2,11 @@
 - Collision vom alten Heap (Kuhhof) /
 - Straßenlampen /
 - Bäume /
+- Hofsilo (Siloanlage erneuert) /
+-- Fahne erneuert /
+-- neue Gosse verbaut /
+-- Schranke mit funktion verbaut vor der Gosse /
+- Fricke Fahne erneuert
 
 - SPLINES !!!!!!!!!!!!!!!!!!!!!!!!!!!!
 - Neune map_PDA erstellen
