--- a/todo
+++ b/todo
@@ -4,14 +4,15 @@
 - Bäume /
 - Lampen Schule testen /
 - Hofsilo (Siloanlage erneuert) /
--- Fahne erneuert /
--- neue Gosse verbaut /
--- Schranke mit funktion verbaut vor der Gosse /
+- Fahne erneuert /
+- neue Gosse verbaut /
+- Schranke mit funktion verbaut vor der Gosse /
 - Fricke Fahne erneuert /
-- Schranke Hofsilo fixen
-- Colision Hofsilo fixen
-- Silo nicht sichtbar
-- Hofsilo Spawnpunkt hinzufügen
+- Schranke Hofsilo fixen /
+- Colision Hofsilo fixen /
+- Silo nicht sichtbar / 
+- Hofsilo Spawnpunkt hinzufügen /
+- Lampem am Hofsilo hinzufügen /
 
 - SPLINES !!!!!!!!!!!!!!!!!!!!!!!!!!!!
 - Neune map_PDA erstellen
