--- a/todo
+++ b/todo
@@ -13,6 +13,7 @@
 - Silo nicht sichtbar / 
 - Hofsilo Spawnpunkt hinzufügen /
 - Lampem am Hofsilo hinzufügen /
+- Probenehmer auf Hofsilo animiert /
 
 - SPLINES !!!!!!!!!!!!!!!!!!!!!!!!!!!!
 - Neune map_PDA erstellen
