--- a/todo
+++ b/todo
@@ -13,7 +13,9 @@
 - Silo nicht sichtbar / 
 - Hofsilo Spawnpunkt hinzufügen /
 - Lampem am Hofsilo hinzufügen /
-- Probenehmer auf Hofsilo animiert /
+- Probenehmer auf Hofsilo animieren /
+- Waage Hofsilo hinzugefügt /
+- Schranken auf Hofsilo kleiner scalieren
 
 - SPLINES !!!!!!!!!!!!!!!!!!!!!!!!!!!!
 - Neune map_PDA erstellen
