--- a/todo
+++ b/todo
@@ -48,3 +48,4 @@
 - Generelle Kauf.- Verkaufstationen
 - Wasserfüllstationen
 - Schafe
+- Strohballen aus Basegame am Keilsilo auf dem Kuhhof plazieren ?
