--- a/todo
+++ b/todo
@@ -100,7 +100,7 @@
 		- Gebäude gefixt /
 		- Schranken verbaut /
 	- Eier Putthoff /
-	- Düngerstation auf dem Hof
+	- Düngerstation auf dem Hof /
 	- Wasserfüllstationen (Hydranten)
 	
 - Produktionen
