--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,4 +1,4 @@
-//Version: 0.0.0.7 Beta
+//Version: 0.0.0.8 Beta
 
 - descVersion angepasst auf "64" /
 - Shop Plätze drehen /
@@ -51,12 +51,12 @@
 - Sound der Kirche anpassen /
 - Rolltore am Haupthof anpassen (Rundumleuchten mit Funktion verbauen) /
 - Zaun am Haupthof austauschen /
-- Plattenweg umbauen am Hof	bzw. ersetzen /
+- Plattenweg am Hof umbauen / anpassen bzw. ersetzen /
 - Beim Sägewerk die koppel an der Straße hat kein Gras (wurde zur Pferdekoppel) /
 - Parkende Autos setzen (Splines/trafficSystem/parkedCars) /
 
 - Schilder Textur (verschmutzte Fahrbahn)
-- Diverse Texturprobleme beheben zb. bei der BGA die Brücke (Staudamm)
+- Diverse Texturprobleme beheben zb. bei der BGA die Brücke (Staudamm) /
 
 - SPLINES anpassen der Autos (nähe Hof, dichter an die Straße)
 - SPLINES anpassen (Fußgänger)
