--- a/ToDo.txt
+++ b/ToDo.txt
@@ -62,8 +62,9 @@
 - placeables.xml anpassen Pfad zur map ändern $mapdir$/.... /
 - Schild am weg beim Haupthof umsetzen /
 - Shopplätze gedreht und angepasst /
-- Shop Sachen Textur anpassen
-- TipColision Bergehalle Haupthof anpassen
+- Shop Sachen Textur anpassen /
+- TipColision Bergehalle Haupthof anpassen / 
+	Wichtig: Scripts -> Maps -> Create Ground Collision Map nachdem platzieren der Colisionen (Bitmask:19)
 
 - BlitzerTrigger Colision Mask ändern (original: 600000) Blitzt zwar, Fahrzeuge bleiben jedoch davor stehen
 - Neue map_PDA erstellen
