--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,5 +1,32 @@
 //Version: 1.0.0.0 Beta
 
+####### Multiplayer Test #######
+- Keine Fahrzeuge Vehicle.xml (farmID)
+- Feld 18 corner anpassen (Wohnhaus) /
+- Bäume am Dorf zum Viehhändler in der Luft /
+- Straßenpfosten zum Viehhändler in der Luft (rechts) (alte ausm 19er nehmen) /
+- Viehhändler Zaun anpassen _ersetzen /
+- Feld 5 Frucht anpassen /
+- Kaimauer Hafen Ecke /
+- Textur Haus im Dorf beim Leuchturm am Wasser /
+- Wasserplane am Dorf (Graben) anpassen und Baum /
+- Wachholderstrauch Leuchtturm /
+- Straße bei der Schafweide in der Luft /
+- Lampen bei der Molkerei in der Luft /
+- Getreide AG Saatgt sowie Dünger und Kalk kaufen /
+- BGA Waage Anzeige /
+- BGA Stromverteiler am FahrSilo (Textur) /
+- BGA Zaun prüfen /
+- Feld 16 prüfen neben dem Händler /
+- HofSilo Borde /
+- HofSilo Wassertank an der Halle in der Luft /
+- Baum beim See Haupthof sowie Boden anpassen / 
+- Boden beim Trafohaus Schweinestall anpassen /
+- Licht Halle Getreide AG funktioniert nicht /
+
+
+
+
 - descVersion angepasst auf "64" /
 - Shop Plätze drehen /
 - Collision vom alten Heap (Kuhhof) /
