--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,7 @@
 //Version: 1.0.0.0 Beta (Online 16.04.2022)
 - Verkaufstrigger bei Fricke hinzufügen
 - KI Tractor Parkend deaktivieren
+- Ballentrigger im Kuhstall testen
 - 
 
 
