--- a/ToDo.txt
+++ b/ToDo.txt
@@ -8,8 +8,8 @@ Stralsunder Brauerei konnten keine Paletten spawnen
 - ggf. Felder hinzugefügen
 - Neue map_PDA erstellen
 - *Zug evtl. verbauen Rücksprache mit Team
-
-
+- Blitzerscript macht error auf dem Dedi Server
+- Geld beim Blitzen wird nicht abgezogen auf dem Dedi server
 
 //Version: 1.0.0.1 (HotFix)
 Fahrzeuge können nun verkauft werden beim Händler sowie in den Werkstätten (Hof und Dorf)
