--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,7 +2,9 @@
 Grünroggen verbaut
 Weißkohl wieder entfernt
 Rotkohl wieder entfernt
-
+Ampeln nochmal verändert
+Mohn konnte nicht mit der Schaufel aufgenommen werden
+Hopfen konnte nicht mit der Schaufel aufgenommen werden
 
 //Version 1.0.0.6
 diverse Schranken werden nun Automatisch durch AutoDrive geöffnet wie zb. diese auf dem Hofsilo
