--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,7 @@
+//Version 1.0.0.9
+am Güllelager wurde der Zaun etwas angepasst und die Leitpfosten welcher in der Einfahrt stand, entfernt
+
+
 //Version 1.0.0.8
 descVersion erhöt auf 75 (angepasst auf Gameversion 1.10.1.0)
 einige Ampelschaltungen waren nicht korregt 
