--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,11 @@
+//Version 1.1.0.0 
+Grünroggen lässt sich nun mit dem Direktschneitwerk mähen, kommt dann Häckselgut (CHAFF) raus mit MaizePlus GPS
+
+Ampeln deaktivierbar machen
+Blitzer deaktivierbar machen 
+
+Roggen sowie Grünroggen kann nun mit dem Pickup für Häcksler aufnehmen
+
 //Version 1.0.0.9 HotFix
 Bodenwinkel waren fehlerhaft und wurden angepasst
 
