--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,10 +1,7 @@
 //Version 1.1.0.0 
 Grünroggen lässt sich nun mit dem Direktschneitwerk mähen, kommt dann Häckselgut (CHAFF) raus mit MaizePlus GPS
+Ampeln können nun deaktiviert werden
 
-Ampeln deaktivierbar machen
-Blitzer deaktivierbar machen 
-
-Roggen sowie Grünroggen kann nun mit dem Pickup für Häcksler aufnehmen
 
 //Version 1.0.0.9 HotFix
 Bodenwinkel waren fehlerhaft und wurden angepasst
