--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,4 @@
+
 //Version 1.1.0.3
 descVersion erhöt auf 79 (angepasst auf Gameversion 1.13.1.0)
 John Deere 7810 mit besserem Sound hinzugefügt
@@ -6,6 +7,7 @@ Zwiebeln wurden überarbeitet und können nun auch geerntet werden
 Startfahrzeuge etwas geändert
 Map auf Manure System angepasst
 geparkte Fahrzeuge standen zum Teil in Wände
+Lichtquellen im Unterstand vom Haupthof angepasst
 
 //Version 1.1.0.2 HotFix
 Grünroggen kann man nun mit Directschneidwerken mähen (Funktioniert "NUR" in Verbindung mit maizePlus) sonst kommt Gras raus.
